--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,10 @@
     <title>Dados Socioeconômicos - Superendividamento</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { background: #f4f4f4; }
+        body {
+            background: url('SuperEndBackgroundTransparente.png') no-repeat center center fixed;
+            background-size: cover;
+        }
         .container { max-width: 1200px; margin: 30px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 8px #0001; }
         h1 { color: #2d5c2f; margin-bottom: 30px; }
         table { font-size: 0.88rem; }
@@ -62,13 +65,18 @@
     </style>
 </head>
 <body>
-    <div id="custom-navbar">
-        <button onclick="window.location.href='index.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
-        <button onclick="window.location.href='geral.html'" class="nav-btn" id="btn-geral">Geral</button>
-        <button onclick="window.location.href='plano-de-pagamento.html'" class="nav-btn" id="btn-plano">Plano de Pagamento</button>
-        <button onclick="window.location.href='panorama.html'" class="nav-btn" id="btn-panorama">Panorama</button>
+    <div style="width:100%;display:flex;justify-content:flex-start;margin-top:4px;margin-bottom:12px; background: #fff;gap:0;flex-wrap:wrap;position:sticky;top:0;z-index:1001;box-shadow:0 2px 8px #0002;">
+        <img src="logo-superendividamento.png" alt="SUPERENDIVIDAMENTO" style="max-width:20%; min-width:5%; height:70px; display:block; box-shadow: 0 2px 8px #0001; border-radius: 12px; margin-left:4px; margin-right:0;" />
+        <div style="flex:1;justify-content:flex-start; width: 80%; padding-top: 5px; padding-bottom: 5px;">
+            <div id="custom-navbar" style="height: 60px; position:static;box-shadow:none;margin-bottom:0;background:linear-gradient(90deg, #e0ffe0 0%, #baffba 100%);border-radius:16px;padding:6px 8px; margin-left:2; margin-right:4px;">
+                <button onclick="window.location.href='index.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
+                <button onclick="window.location.href='geral.html'" class="nav-btn" id="btn-geral">Geral</button>
+                <button onclick="window.location.href='plano-de-pagamento.html'" class="nav-btn" id="btn-plano">Plano de Pagamento</button>
+                <button onclick="window.location.href='panorama.html'" class="nav-btn" id="btn-panorama">Panorama</button>
+            </div>
+        </div>
     </div>
-    <div class="container">
+    <div class="container"; style="background: #ffffff00;">
         <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:30px;">
             <h1>Dados Socioeconômicos do Consumidor</h1>
             <button type="button" class="btn btn-warning mb-3" style="background:#baffba; color:#2d5c2f; border:none; font-weight:bold;" onclick="limparCampos()">Limpar</button>
