--- a/frontend/panorama.html
+++ b/frontend/panorama.html
@@ -6,7 +6,10 @@
     <title>Panorama Mensal Resumido - Superendividamento</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { background: #f4f4f4; }
+        body {
+            background: url('SuperEndBackgroundTransparente.png') no-repeat center center fixed;
+            background-size: cover;
+        }
         .container { max-width: 1100px; margin: 30px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 8px #0001; }
         .titulo-topo { font-size: 1.1em; font-weight: bold; text-align: center; }
         .panorama-title { color: #0074d9; font-weight: bold; font-size: 1.3em; text-align: center; margin: 20px 0 30px 0; }
@@ -123,13 +126,18 @@
     </style>
 </head>
 <body>
-    <div id="custom-navbar">
-        <button onclick="window.location.href='index.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
-        <button onclick="window.location.href='geral.html'" class="nav-btn" id="btn-geral">Geral</button>
-        <button onclick="window.location.href='plano-de-pagamento.html'" class="nav-btn" id="btn-plano">Plano de Pagamento</button>
-        <button onclick="window.location.href='panorama.html'" class="nav-btn" id="btn-panorama">Panorama</button>
+    <div style="width:100%;display:flex;justify-content:flex-start;margin-top:4px;margin-bottom:12px; background: #fff;gap:0;flex-wrap:wrap;position:sticky;top:0;z-index:1001;box-shadow:0 2px 8px #0002;">
+        <img src="logo-superendividamento.png" alt="SUPERENDIVIDAMENTO" style="max-width:20%; min-width:5%; height:70px; display:block; box-shadow: 0 2px 8px #0001; border-radius: 12px; margin-left:4px; margin-right:0;" />
+        <div style="flex:1;justify-content:flex-start; width: 80%; padding-top: 5px; padding-bottom: 5px;">
+            <div id="custom-navbar" style="height: 60px; position:static;box-shadow:none;margin-bottom:0;background:linear-gradient(90deg, #e0ffe0 0%, #baffba 100%);border-radius:16px;padding:6px 8px; margin-left:2; margin-right:4px;">
+                <button onclick="window.location.href='index.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
+                <button onclick="window.location.href='geral.html'" class="nav-btn" id="btn-geral">Geral</button>
+                <button onclick="window.location.href='plano-de-pagamento.html'" class="nav-btn" id="btn-plano">Plano de Pagamento</button>
+                <button onclick="window.location.href='panorama.html'" class="nav-btn" id="btn-panorama">Panorama</button>
+            </div>
+        </div>
     </div>
-    <div class="container">
+    <div class="container"; style="background: #ffffff00;">
         <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:30px;">
             <div class="panorama-title">PANORAMA MENSAL RESUMIDO</div>
         </div>
@@ -250,22 +258,11 @@
 
         // 4. Calcular soma das parcelas não consignadas
         let valorNaoConsignadas = 0;
-        let valorTotalParcelaPlano = getValorTotalParcelas(); // Busca o valor total das parcelas do plano
-        
-        // Usar o valor do plano de pagamento se disponível
-        if (valorTotalParcelaPlano > 0) {
-            valorNaoConsignadas = valorTotalParcelaPlano - valorConsignadas;
-        } else {
-            // Fallback para o cálculo antigo se não houver plano
-            for (let i = 1; i <= 2; i++) {
-                const parcelaMensal = localStorage.getItem(`nao-consignado-${i}-parcela-mensal`);
-                if (parcelaMensal) {
-                    const valor = parseFloat(parcelaMensal.replace(/\./g, '').replace(',', '.'));
-                    if (!isNaN(valor)) valorNaoConsignadas += valor;
-                }
-            }
-        }
-
+        const linhasNaoConsignados = JSON.parse(localStorage.getItem('linhas-nao-consignados') || '[]');
+        linhasNaoConsignados.forEach(linha => {
+            const parcelaMensal = parseFloat(linha.parcelaMensal?.replace(/\./g, '').replace(',', '.')) || 0;
+            valorNaoConsignadas += parcelaMensal;
+        });
         // Atualizar valor e porcentagem das não consignadas
         document.getElementById('valor-nao-consignadas').textContent = '-' + formatBRL(valorNaoConsignadas);
         const pctNaoConsignadas = valorRendimentos > 0 ? (valorNaoConsignadas / valorRendimentos) * 100 : 0;
