--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
             background-size: cover;
         }
         .container { max-width: 1200px; margin: 30px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 8px #0001; }
-        h1 { color: #2d5c2f; margin-bottom: 30px; }
+        h1 { color: #2d5c2f; margin-bottom: 20px; }
         table { font-size: 0.88rem; }
         th, td { padding: 0.3em 0.5em !important; }
         .table-bordered th, .table-bordered td { border: 1px solid #333 !important; }
@@ -65,10 +65,11 @@
     </style>
 </head>
 <body>
-    <div style="width:100%;display:flex;justify-content:flex-start;margin-top:4px;margin-bottom:12px; background: #fff;gap:0;flex-wrap:wrap;position:sticky;top:0;z-index:1001;box-shadow:0 2px 8px #0002;">
-        <img src="logo-superendividamento.png" alt="SUPERENDIVIDAMENTO" style="max-width:20%; min-width:5%; height:70px; display:block; box-shadow: 0 2px 8px #0001; border-radius: 12px; margin-left:4px; margin-right:0;" />
-        <div style="flex:1;justify-content:flex-start; width: 80%; padding-top: 5px; padding-bottom: 5px;">
-            <div id="custom-navbar" style="height: 60px; position:static;box-shadow:none;margin-bottom:0;background:linear-gradient(90deg, #e0ffe0 0%, #baffba 100%);border-radius:16px;padding:6px 8px; margin-left:2; margin-right:4px;">
+    <!--Barra de navegação superior-->
+    <div style="width:100%;display:flex;justify-content:flex-start;margin-top:4px;margin-bottom:10px; background: #fff;gap:0;flex-wrap:wrap;position:sticky;top:0;z-index:1001;box-shadow:0 2px 8px #0002;">
+        <img src="logo-superendividamento.png" alt="SUPERENDIVIDAMENTO" style="max-width:20%; min-width:5%; height:60px; display:block; box-shadow: 0 2px 8px #0001; border-radius: 12px; margin-left:4px; margin-right:0;" />
+        <div style="flex:1;justify-content:flex-start; width: 80%; padding-top: 1px; padding-bottom: 1px; margin-left:4px; margin-right:4px;">
+            <div id="custom-navbar" style="height: 55px; position:static;box-shadow:none;margin-bottom:2px;background:linear-gradient(90deg, #e0ffe0 0%, #baffba 100%);border-radius:16px;padding:6px 8px; margin-left:2;">
                 <button onclick="window.location.href='index.html'" class="nav-btn" id="btn-dados">Dados Socioeconômicos</button>
                 <button onclick="window.location.href='geral.html'" class="nav-btn" id="btn-geral">Geral</button>
                 <button onclick="window.location.href='plano-de-pagamento.html'" class="nav-btn" id="btn-plano">Plano de Pagamento</button>
@@ -90,20 +91,20 @@
                             <tr><th>TIPO</th><th>Evento</th><th>Valor</th></tr>
                         </thead>
                         <tbody id="receitas-body">
-                            <tr><td>Salários ganhos/líquidos</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-salarios"></td></tr>
-                            <tr><td>Ganho mínimo como autônomo</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-ganho-minimo"></td></tr>
-                            <tr><td>Aposentadoria</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-aposentadoria"></td></tr>
-                            <tr><td>Pensão Previdenciária (pensão por morte)</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-pensao-previdenciaria"></td></tr>
-                            <tr><td>Aluguel</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-aluguel"></td></tr>
-                            <tr><td>Pensão Alimentícia (se descontada em folha de pagamento)</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-pensao-alimenticia"></td></tr>
-                            <tr><td>Renda temporária</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-renda-temporaria"></td></tr>
-                            <tr><td>Auxílio por incapacidade</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-auxilio-por-incapacidade"></td></tr>
-                            <tr><td>Auxilio acidente</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-auxilio-acidente"></td></tr>
-                            <tr><td>Auxílio reclusão</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-auxilio-reclusao"></td></tr>
-                            <tr><td>Salário Maternidade</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-salario-maternidade"></td></tr>
-                            <tr><td>Participações nos lucros ou comissões</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-participacoes-nos-lucros-ou-comissoes"></td></tr>
-                            <tr><td>13º salário</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-13-salario"></td></tr>
-                            <tr><td>Outros</td><td></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-outros"></td></tr>
+                            <tr><td>Salários ganhos/líquidos</td><td><input type="text" class="form-control evento" id="receita-salarios-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-salarios"></td></tr>
+                            <tr><td>Ganho mínimo como autônomo</td><td><input type="text" class="form-control evento" id="receita-ganho-minimo-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-ganho-minimo"></td></tr>
+                            <tr><td>Aposentadoria</td><td><input type="text" class="form-control evento" id="receita-aposentadoria-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-aposentadoria"></td></tr>
+                            <tr><td>Pensão Previdenciária (pensão por morte)</td><td><input type="text" class="form-control evento" id="receita-pensao-previdenciaria-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-pensao-previdenciaria"></td></tr>
+                            <tr><td>Aluguel</td><td><input type="text" class="form-control evento" id="receita-aluguel-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-aluguel"></td></tr>
+                            <tr><td>Pensão Alimentícia (se descontada em folha de pagamento)</td><td><input type="text" class="form-control evento" id="receita-pensao-alimenticia-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-pensao-alimenticia"></td></tr>
+                            <tr><td>Renda temporária</td><td><input type="text" class="form-control evento" id="receita-renda-temporaria-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-renda-temporaria"></td></tr>
+                            <tr><td>Auxílio por incapacidade</td><td><input type="text" class="form-control evento" id="receita-auxilio-por-incapacidade-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-auxilio-por-incapacidade"></td></tr>
+                            <tr><td>Auxilio acidente</td><td><input type="text" class="form-control evento" id="receita-auxilio-acidente-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-auxilio-acidente"></td></tr>
+                            <tr><td>Auxílio reclusão</td><td><input type="text" class="form-control evento" id="receita-auxilio-reclusao-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-auxilio-reclusao"></td></tr>
+                            <tr><td>Salário Maternidade</td><td><input type="text" class="form-control evento" id="receita-salario-maternidade-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-salario-maternidade"></td></tr>
+                            <tr><td>Participações nos lucros ou comissões</td><td><input type="text" class="form-control evento" id="receita-participacoes-nos-lucros-ou-comissoes-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-participacoes-nos-lucros-ou-comissoes"></td></tr>
+                            <tr><td>13º salário</td><td><input type="text" class="form-control evento" id="receita-13-salario-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-13-salario"></td></tr>
+                            <tr><td>Outros</td><td><input type="text" class="form-control evento" id="receita-outros-evento"></td><td><input type="number" step="0.01" min="0" class="form-control receita" id="receita-outros"></td></tr>
                         </tbody>
                         <tfoot>
                             <tr class="total-row"><td colspan="2">TOTAL MÊS:</td><td id="total-receitas" class="text-primary">R$ 0,00</td></tr>
@@ -204,6 +205,27 @@
             localStorage.removeItem('valor-final');
             atualizarTotais();
         }
+        document.querySelectorAll('.evento').forEach(input => {
+            input.addEventListener('input', function() {
+                if (this.id) {
+                    localStorage.setItem(this.id, this.value);
+                    if (this.value && this.value.trim() !== '') {
+                        const now = new Date();
+                        const dia = String(now.getDate()).padStart(2, '0');
+                        const mes = String(now.getMonth()+1).padStart(2, '0');
+                        const ano = now.getFullYear();
+                        const hora = String(now.getHours()).padStart(2, '0');
+                        const min = String(now.getMinutes()).padStart(2, '0');
+                        const dataHora = `${dia}/${mes}/${ano} ${hora}:${min}`;
+                        localStorage.setItem(this.id + '-data', dataHora);
+                    }
+                }
+            });
+            // Preencher ao carregar
+            if (input.id && localStorage.getItem(input.id)) {
+                input.value = localStorage.getItem(input.id);
+            }
+        });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
